# job-crawler-be

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FRONTEND_GUIDE.md  GEMINI.md  Plan.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  periodic_task.sh  progress.md  pyproject.toml  schema.sh
.agent/: README.md
.agent/rules/: global.md  python_django.md
.cursor/commands/: check-jira.md  create-pr.md
.cursor/rules/: 00_index.mdc  architecture.mdc  global.mdc  python_django.mdc  ticket.mdc
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: ARCHITECTURE.md  check_chroma_data.py  conftest.py  pytest.ini  run_agent.py  run_crew_test.py  schema.json  test_run_agent.py
app/agent/: admin.py  agents.py  apps.py  crew.py  models.py  permissions.py  schemas.py  serializers.py  summary.md  tasks.py  tools.py  urls.py  views.py
app/agent/migrations/: 0001_initial.py  0002_remove_jobrecommendation_job_posting_and_more.py
app/agent/tests/: test_tasks.py
app/app/: settings.py
app/common/: admin.py  authentication.py  graph_db.py  jwt_cookies.py  logging.py  masking.py  middleware.py  models.py  request_id.py  summary.md  vector_db.py
app/common/ports/: job_repo.py  (+6 more)
app/config/: __init__.py  celery.py  settings.py  urls.py
app/job/: admin.py  apps.py  dtos.py  models.py  permissions.py  recommender.py  serializers.py  services.py  signals.py  skill_extractor.py  summary.md  tasks.py  tests.py  urls.py  views.py
app/job_posting/: apps.py  services.py  tasks.py  urls.py
app/recommendation/: admin.py  models.py  serializers.py  services.py  summary.md  urls.py  views.py
app/resume/: admin.py  dtos.py  embeddings.py  models.py  serializers.py  services.py  summary.md  tasks.py  urls.py  views.py
app/search/: services.py  tests.py  urls.py  views.py
app/skill/: services.py  tests.py  urls.py  views.py
app/tests/: test_celery_config.py
app/user/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
docs/: phase1-additional-analysis.md  phase1-backup-preparation.md  phase1-code-analysis.md  phase1-new-app-structure.md  phase1-summary.md  phase1-test-baseline.md  phase2-1-skill-app-complete.md  phase2-2-search-app-complete.md
scripts/: backup.sh  restore.sh  rollback.sh
(+90 files in other folders)
