[project]
name = "job-crawler-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "crewai[google,google-genai,tools]>=0.86.0",
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "langchain-google-genai>=3.0.0",
    "numpy>=2.0.0",
    "psycopg[binary]>=3.2.11",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
]
