[project]
name = "job-crawler-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[google,google-genai,tools]>=0.86.0",
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "langchain-google-genai>=3.0.0",
    "numpy>=2.0.0",
    "psycopg[binary]>=3.2.11",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "whitenoise>=6.11.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.1",
    "neo4j>=5.23.0",
    "drf-spectacular>=0.27.2",
    "drf-spectacular-sidecar>=2024.7.1",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.6.0",
    "pytest-celery>=1.2.1",
    "redis>=7.0.1",
    "celery>=5.5.3",
    "pylint-django>=2.6.1",
]
