[project]
name = "job-crawler-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.11",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "whitenoise>=6.11.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.1",
    "neo4j>=5.23.0",
    "drf-spectacular>=0.27.2",
    "drf-spectacular-sidecar>=2024.7.1",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.6.0",
    "redis>=7.0.1",
    "celery>=5.5.3",
    "pylint-django>=2.6.1",
    "torch>=2.2.0",
    "google-genai>=0.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
